v4.1
-----
+ Adds automatic language settings detection
+ Adds marketplace transaction summary to market homepage
: Fixes a bug where coupons were showing incorrect expiration dates
: Optimized some code for faster loading

v4.0.1
-----
+ Adds highlighting to sales pages
+ Updated Italian and Portuguese translations

v4.0
-----
+ Add "Total drops remaining" to Badges page
+ Added search, filtering, achievements, news, and links to Library page
: Moving to new price history API
: Updated multiple translations
+ Added "Library" link to SteamCommunity pages
: Fixed "Total Spent" to work in all languages (Thanks johnc!)
: Library feature now enabled by default
+ Adds marketplace links to badge progress pages

v3.9.9
-----
+ Adds automatic age verification to Steam store
+ Adds SteamCardExchange links to badge and badge progress pages
+ Adds DLC categorization to a game's DLC page
+ Adds remaining card drops count
: Library updates
+ Adds an "Add all unowned DLC to cart" button on game's DLC page
: Updated Portuguese translation
: Updated Italian translation
: Fixed bug linking to Steam market from inventory after new market changes
: Fixes bug where tags were sometimes overlapping text

v3.9.8
-----
: Updated French translation
+ Added Italian translation
+ Added Portuguese translation
: Fixed bugs associated with Summer Sale ending
: Fix another bug where German store showing Tages DRM incorrectly

v3.9.7
-----
: Fixes bug with market page not highlighting beyond the first
: Fixes bug with bundle pages not highlighting if game price is "Free" or blank
: Fixes a bug where tags were overlapping prices in some instances
: Fixes a bug where discount percentages were not displaying correctly on wishlists
+ Adds a link to a games dedicated DLC page from that game's app page
+ Adds highlighting to a game's DLC page

v3.9.6
-----
: More profile updates.  This expands to includes users without custom urls

v3.9.5
-----